Bug fix: Missing drop-down arrow in folder menu button in New Clipping dialog
- Only works on macOS; no effect on Windows

--- a/src/chrome/skin/mac/new.css
+++ b/src/chrome/skin/mac/new.css
@@ -37,6 +37,7 @@ menu[open="true"] {
 }
 
 #folder-menu-button {
+  -moz-appearance: menulist-button;
   list-style-image: url("chrome://clippings/skin/images/clippings-root.svg");
   padding-top: 3px;
   padding-bottom: 1px;
